# pandas-mermaid

./: LICENSE  pyproject.toml  readme.md
pandas_mermaid/: converter.py
