[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pandas-mermaid"
version = "0.1.0"
description = "Convert pandas DataFrame to Mermaid flowcharts"
readme = "README.md"
authors = [
    { name="raghuvasanthrao", email="k.s.raghuvsanthrao@gmail.com" }
]
license = { text="MIT" }
dependencies = [
    "pandas"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/raghuvasanthrao/pandas-mermaid"
